Fix navbar collapse
Make uncss ignore rules for ``.collapse.show``.

uncss assumes a static version of the page, so rules for dynamic changes
will end up being removed if they are not whitelisted.

--- a/src/css/vendor.css
+++ b/src/css/vendor.css
@@ -270,6 +270,10 @@ textarea {
   display: none;
 }
 
+.collapse.show {
+  display: block;
+}
+
 .nav {
   display: -webkit-box;
   display: -webkit-flex;
